# seestar-tracker

./: LICENSE  README.md  pyproject.toml
scripts/: measure_slew.py  track_iss.py  track_plane.py
src/seestar_tracker/: __init__.py  adsb_feed.py  cli.py  coord_utils.py  s50_client.py  satellite.py  track_engine.py
tests/: test_coord_utils.py
