[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seestar-tracker"
version = "0.1.0"
description = "Programmatic control of ZWO Seestar S50 for tracking planes, ISS, and satellites"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "skyfield>=1.49",
    "click>=8.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
seestar-track = "seestar_tracker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/seestar_tracker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
